--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "axios": "^1.6.2",
     "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "multer": "^1.4.5-lts.1"
   },
   "license": "MIT"
