--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "scripts": {
-    "start": "json-server-auth db.json -m server.js -H 26.36.121.166 -p 3000 -r routes.json"
-  },
   "dependencies": {
-    "axios": "^1.6.2",
     "json-server": "^0.17.4",
-    "json-server-auth": "^2.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "json-server-auth": "^2.1.0"
   },
   "license": "MIT"
 }
